<?xml version="1.0"?>
<package>
  <name>robotont_driver</name>
  <version>0.0.1</version>
  <description>The robotont_driver package</description>

  <author email="veix123@gmail.com">Veiko Vunder</author>

  <maintainer email="veix123@gmail.com">Veiko Vunder</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>serial</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>serial</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
